assets/style/style.css
/* ... */
#treatmentsSlider #sliderContent {
  flex: 1;
  padding: 20px 10px 0;
}

#openingTimes {
  background-color: #f4f4f4;
  overflow: hidden;
}
#openingTimes .opening-text {
  margin: auto;
  padding-right: 30px;
}
#openingTimes .opening-text ul {
  margin-bottom: 1.5rem;
}
#openingTimes .offset-square {
  position: relative;
  display: flex;
  margin: auto;
}
#openingTimes .offset-square img {
  position: relative;
  height: 200px;
  margin: auto;
}
#openingTimes .offset-square .square {
  position: relative;
  margin: auto;
}
#openingTimes .offset-square .square::before {
  position: absolute;
  content: "";
  height: 200px;
  width: 260px;
  top: 0;
  left: 0;
  margin: 15px 0 0 50px;
  background-color: #b6add9;
}

/* Testimonials carousel */
#testimonials {
  background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("../images/consultation.jpg");
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  position: relative;
  color: white;
  text-shadow: 2px 1px 2px rgba(0, 0, 0, 0.3);
}
#testimonials .left-quote {
  font-size: 30px;
}
#testimonials .right-quote {
  font-size: 30px;
}

#testimonialsCarousel {
  padding: 100px 20px;
}
#testimonialsCarousel .carousel-indicators {
  margin-bottom: 0;
}
#testimonialsCarousel .carousel-indicators li {
  background-color: #441B70;
  height: 4px;
}

#contact {
  background-color: #9990bd;
  color: white;
  text-align: center;
  margin-bottom: 0;
}
#contact a:hover {
  color: #71509C;
}

/* treatments.html content */
#costs {
  background-color: #441B70;
  color: #ffffff;
  padding-top: 3rem;
  padding-bottom: 3rem;
  text-align: center;
}

#treatmentsMainContent h2, #whatToExpectMainContent > div:first-child h2 {
  color: #441B70;
  padding-top: 30px;
}
#treatmentsMainContent > div:first-child h2, #whatToExpectMainContent > div:first-child > div:first-child h2 {
  padding-top: 0;
}
#treatmentsMainContent ul, #whatToExpectMainContent > div:first-child ul {
  list-style-type: disclosure-closed;
}

/* feedback.html content */
#feedbackMainContent b {
  color: #441B70;
}

/* whattoexpect.html content */
#whatToExpectMainContent {
  padding-top: 0;
}
/* contact.html content */
#contactTable {
  width: 500px;
  margin-left: auto;
  margin-right: auto;
  border: 1px solid black;
  border-collapse: collapse;
}
#contactTable th, #contactTable td, #contactTable tr {
  padding: 6px;
  border: 1px solid black;
}
#contactTable th {
  font-size: 1.1em;
}

#location {
  position: relative;
  height: 0;
  padding-bottom: 32rem;
}
#location iframe {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

/* about.html content */
#aboutLogos {
  padding-top: 0;
}

/* Footer */
#footer {
  background-color: white;
  color: rgba(0, 0, 0, 0.5);
  padding: 2.5rem 0 1rem 0;
}
#footer a, #footer a:hover {
  color: rgba(0, 0, 0, 0.5);
  font-weight: 100;
}
#footer .copyright {
  display: flex;
  justify-content: center;
  flex-direction: column;
  text-align: center;
  margin-top: 10px;
}
#footer .copyright img {
  align-self: center;
}

/* Utility classes */
.jump-link-offset {
  display: block;
  position: relative;
  top: -161px;
  visibility: hidden;
}

.text-overlay {
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  padding: 10px 15px;
  text-align: center;
}

.text-container {
  padding-top: 4rem;
  padding-bottom: 4rem;
}

.quote-container {
  padding-top: 6rem;
  padding-bottom: 3rem;
}

.container-tight, .container-extra-tight {
  width: 100%;
  padding-right: 0;
  padding-left: 0;
  margin-right: auto;
  margin-left: auto;
}

.wrap-around-img, .wrap-around-img-below {
  display: flex;
  flex-direction: column;
}
.wrap-around-img img, .wrap-around-img-below img {
  margin: 0 auto 3rem;
}

.wrap-around-img-below {
  flex-direction: column-reverse;
}
.wrap-around-img-below img {
  margin: 3rem auto 0;
}

.img-shadow {
  border-radius: 3px;
  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
}

ul.list {
  display: block;
  margin: 1em 0;
  padding: 0;
  list-style-type: none;
}
ul.list li {
  display: block;
  padding: 0.45rem 0;
}
ul.list li:first-child {
  margin-top: 0;
  padding-top: 0;
}
ul.list li:last-child {
  margin-bottom: 0;
  padding-bottom: 0;
}
ul.list li i {
  margin: 0;
  padding: 0;
  padding-right: 0.4rem;
  vertical-align: top;
}
ul.list.bar > li {
  border-top: 1px solid rgba(255, 255, 255, 0.85);
}
ul.list.bar > li:first-child {
  border-top: none;
}

.horizontal-bar-list {
  padding: 0;
}
.horizontal-bar-list li {
  display: inline-block;
  margin: 0;
  font-size: 1rem;
  line-height: 0.6;
  border-left: 1px solid rgba(0, 0, 0, 0.5);
}
.horizontal-bar-list li:first-child {
  border-left: none;
}
.horizontal-bar-list li:not(:first-child) {
  padding-left: 0.5em;
}
.horizontal-bar-list li:not(:last-child) {
  padding-right: 0.5em;
}
.horizontal-bar-list i {
  vertical-align: middle;
  margin: 0;
  padding: 0 0.25em 0 0;
}

.highlight-font {
  font-family: PlayfairItal, Georgia, "Times New Roman", Times, serif;
  color: #441B70;
}

.primary-font {
  color: #441B70;
}

.logo-font {
  font-family: TangerineBold, "Brush Script MT", cursive, sans-serif;
}

.rtl {
  direction: rtl;
}

[class^=flaticon-] {
  color: #441B70;
}

/* Bootstap overrides */
.btn-primary {
  background: #441B70;
  border: none;
  border-radius: 4px;
  font-family: Georgia, "Times New Roman", Times, serif;
  font-size: 1.05rem;
}
.btn-primary:hover, .btn-primary:active {
  background: #71509C !important;
  border: none !important;
}
.btn-primary:focus, .btn-primary:focus-within {
  box-shadow: 0 0 0 0.2rem #8670a1 !important;
}
.btn-primary:focus-within {
  box-shadow: none !important;
}

.lead {
  font-family: PlayfairReg, Georgia, "Times New Roman", Times, serif;
  font-size: 1.3rem;
}
.lead.italics {
  font-family: PlayfairItal, Georgia, "Times New Roman", Times, serif;
}

hr.white {
  border-color: white;
}
/* ... */

